fix the alignment and added more things

--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -2434,3 +2434,9 @@ body {
 	}
 
 }
+@media (min-width: 768px) {
+  .heros {
+    height: 90vh;
+    align-content: center;
+  }
+}
