--- a/src/global.css
+++ b/src/global.css
@@ -7050,10 +7050,10 @@ h4 {
   color: #fff !important;
 }
 
-.heros{
+/* .heros{
   height: 90vh;
   align-content: center;
-}
+} */
 .sizeo{
   font-size: 20px;
 }
@@ -7095,4 +7095,8 @@ h4 {
 
 .sizeTotal{
   font-size: 12px;
+}
+
+.sizepending{
+  font-size:11px;
 }
